@@ -1,3 +1,9 @@
+ags (0.6.57)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* fixed whoops backport old code in 0.6.56, now it's correct
+	* fixed unsafe pthread_cond_signal() introduced in 0.6.56
+
 ags (0.6.56)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
